crates/forge_services/src/tools/fs/snapshots/forge_services__tools__fs__fs_list__test__fs_list_empty_directory.snap
---
source: crates/forge_services/src/tools/fs/fs_list.rs
expression: "TempDir::normalize(result.as_str())"
snapshot_kind: text
---
<file_list path="[TEMP_DIR]">
<dir path="/">
</file_list>
